--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.479.0",
     "next": "15.1.7",
