--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.479.0",
-    "next": "15.1.7",
     "next-auth": "^4.24.11",
     "prisma": "^6.8.2",
     "react": "^18.3.1",
@@ -23,7 +22,8 @@
     "react-simple-typewriter": "^5.0.1",
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.2.0",
-    "sparkles": "^2.1.0"
+    "sparkles": "^2.1.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
