--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.2.0",
     "sparkles": "^2.1.0",
+    "sweetalert2": "^11.22.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
